Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p>The idea is to create a consistant interface for accessing things like persitence and configuration.</p>
 
-<p>Documentation for this will eventally appear on my <a href="http://www.jdibble.co.uk">blog/portfolio website</a>.</p>
+<p>Documentation for this will eventally appear on here.</p>
 
 <h2>
 <a name="extensions" class="anchor" href="#extensions"><span class="octicon octicon-link"></span></a>Extensions</h2>
@@ -54,7 +54,7 @@
 
 <p>This namespace could be part of the Application Framework, but I felt it deserved it's own place in the solution.</p>
 
-<p>Documentation for this will eventally appear on my <a href="http://www.jdibble.co.uk">blog/portfolio website</a>.</p>
+<p>Documentation for this will eventally appear on my here.</p>
 
 <h2>
 <a name="legal-shizzle" class="anchor" href="#legal-shizzle"><span class="octicon octicon-link"></span></a>Legal Shizzle</h2>
