Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,14 +35,16 @@
 
 <p>Here we have my (work in progress) application framework, collection of extension methods and service bus implementation.</p>
 
+<p>The solution is continuously integrated using <a href="https://appharbor.com/">AppHarbour</a>.</p>
+
 <hr><h2>
 <a name="application-framework" class="anchor" href="#application-framework"><span class="octicon octicon-link"></span></a>Application Framework</h2>
 
-<p>This is my collection of classes that I use to abstract certain operations out of actual projects I complete for other people.  After completing a couple of websites for clients, it was obvious what code could be extracted and shared between projects, so thats exactly what I did.</p>
+<p>This is my collection of classes that I use to abstract certain operations out of actual projects I complete for other people.  After completing a couple of websites for clients, it was obvious what code could be extracted and shared between projects, so that's exactly what I did.</p>
 
-<p>The idea is to create a consistant interface for accessing things like persitence and configuration.</p>
+<p>The idea is to create a consistent interface for accessing things like persitence and configuration.</p>
 
-<p>Documentation for this will eventally appear on here.</p>
+<p>I'm working on creating some documentation.</p>
 
 <h2>
 <a name="extensions" class="anchor" href="#extensions"><span class="octicon octicon-link"></span></a>Extensions</h2>
@@ -52,9 +54,17 @@
 <h2>
 <a name="service-bus" class="anchor" href="#service-bus"><span class="octicon octicon-link"></span></a>Service Bus</h2>
 
-<p>This namespace could be part of the Application Framework, but I felt it deserved it's own place in the solution.</p>
+<p>This namespace could be part of the Application Framework, but I felt it deserved it's own place in the solution.  </p>
 
-<p>Documentation for this will eventally appear on my here.</p>
+<h3>
+<a name="what-is-it" class="anchor" href="#what-is-it"><span class="octicon octicon-link"></span></a>What is it?</h3>
+
+<p>This is a work in progress enterprise service bus reusable class library for use in all types of applications no matter how big or small.</p>
+
+<h3>
+<a name="where-can-i-find-out-information-on-it" class="anchor" href="#where-can-i-find-out-information-on-it"><span class="octicon octicon-link"></span></a>Where can I find out information on it.</h3>
+
+<p>Again, I am working on documentation for this, as well as a good way of sharing the design.</p>
 
 <h2>
 <a name="legal-shizzle" class="anchor" href="#legal-shizzle"><span class="octicon octicon-link"></span></a>Legal Shizzle</h2>
